2014-03-01  Oleg Endo  <olegendo@gcc.gnu.org>

	PR target/60071
	* config/sh/sh.md (*mov_t_msb_neg): Split into ...
	(*mov_t_msb_neg_negc): ... this new insn.

2014-02-28  Jason Merrill  <jason@redhat.com>

	PR c++/58678
	* ipa-devirt.c (ipa_devirt): Don't choose an implicitly-declared
	function.

2014-02-28  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/60314
	* dwarf2out.c (decltype_auto_die): New static.
	(gen_subprogram_die): Handle 'decltype(auto)' like 'auto'.
	(gen_type_die_with_usage): Handle 'decltype(auto)'.
	(is_cxx_auto): Likewise.

2014-02-28  Ian Bolton  <ian.bolton@arm.com>

	* config/aarch64/aarch64.h: Define __ARM_NEON by default if
	we are not using general regs only.

2014-02-28  Richard Biener  <rguenther@suse.de>

	PR target/60280
	* tree-cfgcleanup.c (tree_forwarder_block_p): Restrict
	previous fix and only allow to remove trivial pre-headers
	and latches.  Also honor LOOPS_MAY_HAVE_MULTIPLE_LATCHES.
	(remove_forwarder_block): Properly update the latch of a loop.

2014-02-28  Alexandre Oliva <aoliva@redhat.com>

	PR debug/59992
	* cselib.c (cselib_hasher::equal): Special-case VALUE lookup.
	(cselib_preserved_hash_table): New.
	(preserve_constants_and_equivs): Move preserved vals to it.
	(cselib_find_slot): Look it up first.
	(cselib_init): Initialize it.
	(cselib_finish): Release it.
	(dump_cselib_table): Dump it.

2014-02-28  Alexandre Oliva <aoliva@redhat.com>

	PR debug/59992
	* cselib.c (remove_useless_values): Skip to avoid quadratic
	behavior if the condition moved from...
	(cselib_process_insn): ... here holds.

2014-02-28  Alexandre Oliva <aoliva@redhat.com>

	PR debug/57232
	* var-tracking.c (vt_initialize): Apply the same condition to
	preserve the CFA base value.

2014-02-28  Joey Ye  <joey.ye@arm.com>

	PR target/PR60169
	* config/arm/arm.c (thumb_far_jump_used_p): Don't change
	if reload in progress or completed.

2014-02-28  Tobias Burnus  <burnus@net-b.de>

	PR middle-end/60147